--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -9,7 +9,7 @@
     <h1>投稿一覧</h1>
     <ul>
         <% for(let post of posts){ %>
-            <li>タイトル：<%= post.title %></li>
+            <li><a href="/posts/<%= post._id %>">タイトル：<%= post.title %></a></li>
             <li>本文：<%= post.body %></li>
         <% } %>
     </ul>
